Closed Bug 239298 Opened 21 years ago Closed 21 years ago

compile warnings with gcc

Categories

(Core :: XPCOM, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bugzilla, Assigned: Biesinger)

Details

Attachments

(1 file)

when compiling with gcc in windows I see: d:/mozilla/mozilla/xpcom/io/nsLocalFileWin.cpp: In member function `virtual nsresult nsLocalFile::Remove(int)': d:/mozilla/mozilla/xpcom/io/nsLocalFileWin.cpp:1438: warning: comparison between signed and unsigned integer expressions d:/mozilla/mozilla/xpcom/io/nsLocalFileWin.cpp: In member function `virtual nsresult nsLocalFile::GetPermissions(PRUint32*)': d:/mozilla/mozilla/xpcom/io/nsLocalFileWin.cpp:1561: warning: unused variable ` const char*filePath' d:/mozilla/mozilla/xpcom/io/nsLocalFileWin.cpp: In member function `virtual nsresult nsLocalFile::Launch()': d:/mozilla/mozilla/xpcom/io/nsLocalFileWin.cpp:2282: warning: unused variable ` nsresult rv' ../../dist/include/xpcom/nsCOMPtr.h: At top level: d:/mozilla/mozilla/xpcom/io/nsLocalFileWin.cpp:230: warning: `void myLL_II2L(int, int, PRInt64*)' defined but not used
Attached patch patchSplinter Review
I tried to not change the logic esp. of GetPermissions...
Assignee: dougt → cbiesinger
Status: NEW → ASSIGNED
Comment on attachment 145203 [details] [diff] [review] patch please remove the other myLL_II2L in the OS2 version. I think i like this syntax better: + if (rv == (nsresult)-1) with that, r=dougt
Attachment #145203 - Flags: review?(dougt) → review+
checked in, with those changes made Checking in nsLocalFileOS2.cpp; /cvsroot/mozilla/xpcom/io/nsLocalFileOS2.cpp,v <-- nsLocalFileOS2.cpp new revision: 1.75; previous revision: 1.74 done Checking in nsLocalFileWin.cpp; /cvsroot/mozilla/xpcom/io/nsLocalFileWin.cpp,v <-- nsLocalFileWin.cpp new revision: 1.116; previous revision: 1.115 done
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: