fix compile warnings in nsLocalFileWin, r=dougt bug 239298